--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sql-where",
   "version": "0.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
     "test": "make test"
   },
